Fix home-1 background (increase scale to 1.3, add overflow hidden), reduce dragon size 10% and move left 20px

--- a/css/home-sections.css
+++ b/css/home-sections.css
@@ -19,8 +19,9 @@
   width: 100% !important;
   height: 100% !important;
   opacity: 0.6;
-  transform: scale(1.25);
+  transform: scale(1.3);
   transform-origin: center center;
+  overflow: hidden;
 }
 
 .home-1__bg {
