--- a/css/style.css
+++ b/css/style.css
@@ -1373,7 +1373,7 @@ body {
   /* Scaled image: w: 325px, h: 143px */
   .philosophy__dragon {
     position: absolute;
-    left: -75px !important; /* Moved left 25px: -20px - 25px = -45px */
+    left: -95px !important; /* Moved left 20px more: -75px - 20px = -95px */
     top: 301px; /* Reduced: 351px - 50px = 301px */
     width: (222*1.15)px; /* Increased: 193px * 1.15 = 222px (additional 15%) */
     height: (505*1.15)px; /* Increased: 439px * 1.15 = 505px (additional 15%) */
@@ -1384,8 +1384,8 @@ body {
   }
   
   .philosophy__dragon img {
-    width: 431px !important; /* Increased: 375px * 1.15 = 431px (additional 15%) */
-    height: 189px !important; /* Increased: 164px * 1.15 = 189px (additional 15%) */
+    width: 388px !important; /* Reduced 10%: 431px * 0.9 = 388px */
+    height: 170px !important; /* Reduced 10%: 189px * 0.9 = 170px */
     aspect-ratio: 191 / 84;
     object-fit: contain;
     display: block;
